--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,15 +1,19 @@
 {
-  "title1": "عنوان ١١",
-  "title2": "عنوان ٢٢",
-  "title3": "عنوان ٣٣",
-  "body1": "محتوي ١١",
-  "body2": "محتوي ٢٢",
-  "body3": "محتوي ٣٣",
+  "title1": "احصل علي اقوي العروض",
+  "title2": "احصل علي افضل الأسعار",
+  "title3": "احصل علي افضل الماركات",
+  "body1": "لدينا  اقوي العروض",
+  "body2": "لدينا  افضل الأسعار",
+  "body3": "لدينا  افضل الماركات",
   "loginTitle": "سجل دخولك",
   "loginSubTitle": "سجل دخولك كي تتمكن من الإطلاع علي أجدد العروض",
   "email": "البريد الإلكتروني",
+  "phone": "رقم الهاتف",
+  "user_name": "اسم المستخدم",
   "password": "كلمة المرور",
+  "confirmPassword": "تأكيد كلمة المرور",
   "login": "دخول",
+
   "donNotHave": "ليس لديك حساب؟",
   "registerNow": "سجل الان",
   "home": "الرئيسية",
