--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,10 +1,11 @@
 {
-  "title1": "Title 11",
-  "title2": "Title 22",
-  "title3": "Title 33",
-  "body1": "Body 11",
-  "body2": "Body 22",
-  "body3": "Body 33",
+  "title1": "Get the best offers",
+  "title2": "Get the best price",
+  "title3": "Get the best brands",
+  "body1": "We have the best offers",
+  "body2": "We have the best prices",
+  "body3": "We have the best brands",
+  "phone": "mobile number",
   "loginTitle": "Sign In",
   "loginSubTitle": "Please Sign In To Enjoy Our New Deals",
   "email": "Email Address",
@@ -15,6 +16,8 @@
   "donNotHave": "Don't Have An Account?",
   "registerNow": "Register Now",
   "home": "Home",
+  "user_name": "user name",
+  "confirmPassword": "confirmPassword",
   "categories": "Categories",
   "cart": "Cart",
   "settings": "Settings",
