--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -23,7 +23,7 @@
   "salla": "سلة",
   "search": "ابحث عن منتج",
   "discount": "خصم",
-  "currency": "ريال",
+  "currency": "دينار",
   "browse": "اكتشف الأقسام",
   "new_arrivals": "منتجات جديدة",
   "see": "الكل",
