--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -24,7 +24,7 @@
   "salla": "Salla",
   "search": "Search Product",
   "discount": "DISCOUNT",
-  "currency": "SAR",
+  "currency": "DL",
   "browse": "Browse Categories",
   "new_arrivals": "New Arrivals",
   "see": "see all",
