--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -5,6 +5,8 @@
   "body1": "لدينا  اقوي العروض",
   "body2": "لدينا  افضل الأسعار",
   "body3": "لدينا  افضل الماركات",
+  "passwordValidation": "يرجي إدخال كلمة المرور",
+  "emailValidation": "يرجي إدخال اسم المستخدم",
   "loginTitle": "سجل دخولك",
   "loginSubTitle": "سجل دخولك كي تتمكن من الإطلاع علي أجدد العروض",
   "email": "البريد الإلكتروني",
